[package]
name = "krath"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
libp2p = { version = "0.54", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.217"
log = "0.4.25"
pretty_env_logger = "0.5.0"
serde_json = "1.0.137"
once_cell = "1.20.2"
